--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -50,14 +50,14 @@
   <!-- MAIN CONTENT -->
   <div class="container-fluid">
     <div class="row" id="main-wrapper">
-      <div class="col-12 order-1 col-xl-3 order-xl-1">
+      <div class="col-12 order-1 col-lg-6 col-xxl-3 order-xxl-1">
         <div class="row drop" id="subscriptions">
           {% if user.is_authenticated %}
             {% if subscriptions %} {% with subscriptions as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
           {% endif %}
         </div>
       </div>
-      <div class="col-12 order-3 col-xl-6 order-xl-2">
+      <div class="col-12 order-3 col-xxl-6 order-xxl-2">
         <!-- CENTER STAGE -->
         <div class="row drop" id="center-stage">
           {% block center-stage %} {% endblock %}
@@ -92,10 +92,10 @@
           </div>
         </div>
       </div>
-      <div class="col-12 order-2 col-xl-3 order-xl-3">
+      <div class="col-12 order-2 col-lg-6 col-xxl-3 order-xxl-3">
         <div class="row drop" id="playlist">
           {% if user.is_authenticated %}
-            {% if playlist %} {% with playlist as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
+          {% if playlist %} {% with playlist as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
           {% endif %}
         </div>
       </div>
