--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -1,5 +1,5 @@
 <div class="logo">
-  <div class="dope-buttons dope-buttons-c">
+  <div class="dope-buttons">
     <a class="btn-dope index-link" href="/">
       <span class="active">
         d
@@ -40,7 +40,7 @@
 <div class="listen-carousel">
   <div>
     <div class="logo d-none">
-      <div class="dope-buttons dope-buttons-c">
+      <div class="dope-buttons">
         <a class="btn-dope index-link" href="/">
           <span class="active">
             d
@@ -81,7 +81,7 @@
   </div>
   {% for episode in results.episodes %}
     <div>
-      <div class="dope-result color-3 expandable clearfix">
+      <div class="dope-result dope-result-r color-3 expandable clearfix">
         <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
           title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
           <img class="img-fluid" data-lazy="//{{ episode.podcast.artworkUrl }}100x100bb.jpg" onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" width="100" height="100" title="{{ episode.podcast.title }}" alt="Podcast artwork" />
@@ -109,7 +109,22 @@
             <span>{{ episode.played_ago }}</span>
           </li>
         </ul>
-        <div class="dope-buttons dope-buttons-c px-0">
+        <div class="dope-buttons px-0">
+          {% if user.is_authenticated %}
+            <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
+              {% csrf_token %}
+              <input type="hidden" name="mode" value="add" />
+              <input type="hidden" name="signature" value="{{ episode.signature }}" />
+              <button class="btn-dope" type="submit" title="Add to Playlist">
+                <span class="active">
+                  Add
+                </span>
+                <span>
+                  <i class="fas fa-plus"></i>
+                </span>
+              </button>
+            </form>
+          {% endif %}
           <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
             {% csrf_token %}
             <input type="hidden" name="mode" value="play" />
@@ -132,7 +147,7 @@
             </span>
           </a>
           <a class="btn-dope showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
-            title="{{ episode.podcast.title }}">
+            title="Show All Episodes">
             <span class="active">
               Show
             </span>
@@ -140,21 +155,6 @@
               <i class="fas fa-bars"></i>
             </span>
           </a>
-          {% if user.is_authenticated %}
-            <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
-              {% csrf_token %}
-              <input type="hidden" name="mode" value="add" />
-              <input type="hidden" name="signature" value="{{ episode.signature }}" />
-              <button class="btn-dope" type="submit" title="Add to Playlist">
-                <span class="active">
-                  Add
-                </span>
-                <span>
-                  <i class="fas fa-plus"></i>
-                </span>
-              </button>
-            </form>
-          {% endif %}
           <a class="btn-dope exp" data-toggle="collapse" data-target="#splash-play-collapse{{ forloop.counter }}" aria-expanded="false" title="Show More">
             <span class="active">
               More
@@ -167,24 +167,58 @@
         <div class="collapse fade splash-play-collapse" id="splash-play-collapse{{ forloop.counter }}">
           <ul class="dope-list">
             <li>
-              <span>Length</span>
-              <span>{% if episode.length %}{{ episode.length }}{% else %}N/A{% endif %}</span>
+              <span>
+                Length
+              </span>
+              <span>
+                {% if episode.length %}
+                  {{ episode.length }}
+                {% else %}
+                  N/A
+                {% endif %}
+              </span>
             </li>
             <li>
-              <span>Size</span>
-              <span>{% if episode.size %}{{ episode.size }}{% else %}N/A{% endif %}</span>
+              <span>
+                Size
+              </span>
+              <span>
+                {% if episode.size %}
+                  {{ episode.size }}
+                {% else %}
+                  N/A
+                {% endif %}
+              </span>
             </li>
             <li>
-              <span>Genre</span>
-              <span>{{ episode.podcast.get_primary_genre }}</span>
+              <span>
+                Genre
+              </span>
+              <span>
+                <a class="browse-link" href="/search/?genre={{ episode.podcast.get_primary_genre.url_format }}">
+                  {{ episode.podcast.get_primary_genre }}
+                </a>
+                (#{{ episode.podcast.genre_rank }})
+              </span>
             </li>
             <li>
-              <span>Language</span>
-              <span>{{ episode.podcast.language }}</span>
+              <span>
+                Language
+              </span>
+              <span>
+                <a class="browse-link" href="/search/?genre={{ episode.podcast.language.url_format }}">
+                  {{ episode.podcast.language }}
+                </a>
+                (#{{ episode.podcast.language_rank }})
+              </span>
             </li>
             <li>
-              <span>Subscribers</span>
-              <span>{{ episode.podcast.get_n_subscribers }}</span>
+              <span>
+                Subscribers
+              </span>
+              <span>
+                {{ episode.podcast.get_n_subscribers }}
+              </span>
             </li>
           </ul>
           <p>
