--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -1,11 +1,9 @@
 <div class="row">
   {% for podcast in results.podcasts %}
-    <div class="col-12 expandable dope-result{% if forloop.counter|divisibleby:2 %} color-3{% endif %}">
-      <div class="charts-rank">
-        <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
-          {{ forloop.counter }}
-        </a>
-      </div>
+    <div class="col-12 expandable dope-result dope-result-r{% if forloop.counter|divisibleby:2 %} color-3{% endif %}">
+      <a class="dope-dot showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
+        {{ forloop.counter }}
+      </a>
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
         <img class="img-fluid lazyload" data-src="//{{ podcast.object.artworkUrl }}100x100bb.jpg"
           onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg'" title="{{ podcast.object.title }}"
@@ -28,7 +26,10 @@
             Genre
           </span>
           <span>
-            {{ podcast.object.get_primary_genre }}
+            <a class="browse-link" href="/search/?genre={{ podcast.object.get_primary_genre.url_format }}">
+              {{ podcast.object.get_primary_genre }}
+            </a>
+            (#{{ podcast.object.genre_rank }})
           </span>
         </li>
         <li>
@@ -36,41 +37,28 @@
             Language
           </span>
           <span>
-            {{ podcast.object.language }}
-          </span>
-        </li>
-        <li>
-          <span>
-            Subscribers
-          </span>
-          <span>
-            {{ podcast.object.get_n_subscribers }}
+            <a class="browse-link" href="/search/?language={{ podcast.object.language.url_format }}">
+              {{ podcast.object.language }}
+            </a>
+            (#{{ podcast.object.language_rank }})
           </span>
         </li>
       </ul>
       <div class="dope-buttons px-0">
-        <a class="btn-dope showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
-          <span class="active">
-            Show
-          </span>
-          <span>
-            <i class="fas fa-bars"></i>
-          </span>
-        </a>
         {% if user.is_authenticated %}
-          <form class="subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="podid[]" value="{{ podcast.object.podid }}" />
-            {% if podcast.object.is_subscribed %}
-              <button class="btn-dope sub-button" type="submit" title="Unsubscribe">
-                <span class="active">
-                  Unsubscribe
-                </span>
-                <span>
-                  <i class="fas fa-times"></i>
-                </span>
-              </button>
-            {% else %}
+        <form class="subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="podid[]" value="{{ podcast.object.podid }}" />
+          {% if podcast.object.is_subscribed %}
+          <button class="btn-dope sub-button" type="submit" title="Unsubscribe">
+            <span class="active">
+              Unsubscribe
+            </span>
+            <span>
+              <i class="fas fa-times"></i>
+            </span>
+          </button>
+          {% else %}
           <button class="btn-dope sub-button" type="submit" title="Subscribe">
             <span class="active">
               Subscribe
@@ -79,9 +67,69 @@
               <i class="fas fa-check"></i>
             </span>
           </button>
-            {% endif %}
-          </form>
+          {% endif %}
+        </form>
         {% endif %}
+        <a class="btn-dope showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}"
+          title="Show All Episodes">
+          <span class="active">
+            Show
+          </span>
+          <span>
+            <i class="fas fa-bars"></i>
+          </span>
+        </a>
+        <button class="btn-dope exp" data-toggle="collapse" data-target="#charts-collapse{{ forloop.counter }}" aria-expanded="false"
+          title="Show More">
+          <span class="active">
+            More
+          </span>
+          <span class="exp-icon">
+            <i class="fas fa-ellipsis-v"></i>
+          </span>
+        </button>
+      </div>
+      <div class="collapse fade charts-collapse" id="charts-collapse{{ forloop.counter }}">
+        <ul class="dope-list">
+          <li>
+            <span>
+              Rank
+            </span>
+            <span>
+              #{{ podcast.rank }}
+            </span>
+          </li>
+          <li>
+            <span>
+              Subscribers
+            </span>
+            <span>
+              {{ podcast.object.get_n_subscribers }}
+            </span>
+          </li>
+          <li>
+            <span>
+              Content
+            </span>
+            <span>
+              {% if podcast.explicit %}
+                explicit
+              {% else %}
+                clean
+              {% endif %}
+            </span>
+          </li>
+        </ul>
+        <p>
+          Description:
+        </p>
+        <p>
+          {% if podcast.object.description %}
+            {{ podcast.object.description }}
+          {% else %}
+            No description
+          {% endif %}
+        </p>
       </div>
     </div>
   {% endfor %}
