--- a/podcasts/templates/episodes-table.html
+++ b/podcasts/templates/episodes-table.html
@@ -5,11 +5,6 @@
         <th scope="col" class="order">
           <span>#</span>
         </th>
-        {% if results.view == "playlist" %}
-          <th scope="col">
-            <span>Podcast</span>
-          </th>
-        {% endif %}
         <th scope="col">
           <span>Title</span>
         </th>
@@ -64,7 +59,7 @@
           </td>
         </tr>
         <tr class="{% if not results.pages %}{% if forloop.last %}noborder{% endif %}{% endif %}">
-          <td colspan="{% if results.view == 'playlist' %}7{% else %}6{% endif %}" class="episode-hidden{% if forloop.counter0|divisibleby:2 %} color-3{% endif %}">
+          <td colspan="6" class="episode-hidden{% if forloop.counter0|divisibleby:2 %} color-3{% endif %}">
             <div class="collapse fade more-collapse" id="more-collapse-{{ results.view }}-{{ episode.position }}">
               <div class="dope-result">
                 <p>
@@ -77,51 +72,11 @@
                   No description
                   {% endif %}
                 </p>
-                <div class="dope-buttons dope-buttons-r px-0">
-                  {% if results.view == "playlist" %}
-                  <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden" name="mode" value="remove" />
-                    <input type="hidden" name="pos" value="{{ episode.position }}" />
-                    <button class="btn-dope playlist-remove" type="submit" title="Remove">
-                      <span class="active">
-                        <i class="fas fa-times icon"></i>
-                      </span>
-                    </button>
-                  </form>
-                  {% if not forloop.first %}
-                  <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden" name="mode" value="up" />
-                    <input type="hidden" name="pos" value="{{ episode.position }}" />
-                    <button class="btn-dope playlist-move-up" type="submit" title="Move Up">
-                      <span class="active">
-                        <i class="fas fa-arrow-up"></i>
-                      </span>
-                    </button>
-                  </form>
-                  {% endif %}
-                  {% if not forloop.last %}
-                  <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden" name="mode" value="down" />
-                    <input type="hidden" name="pos" value="{{ episode.position }}" />
-                    <button class="btn-dope playlist-move-down" type="submit" title="Move Down">
-                      <span class="active">
-                        <i class="fas fa-arrow-down"></i>
-                      </span>
-                    </button>
-                  </form>
-                  {% endif %}
-                  {% endif %}
+                <div class="dope-buttons">
                   <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
                     {% csrf_token %}
                     <input type="hidden" name="mode" value="play" />
-                    {% if results.view == "playlist" %}
-                    <input type="hidden" name="pos" value="{{ episode.position }}" />
-                    {% else %}
                     <input type="hidden" name="signature" value="{{ episode.signature }}" />
-                    {% endif %}
                     <button class="btn-dope playlist-play" type="submit" title="Play Episode">
                       <span class="active">
                         Play
@@ -139,17 +94,6 @@
                       <i class="fas fa-download"></i>
                     </span>
                   </a>
-                  {% if results.view == "playlist" %}
-                  <a class="btn-dope showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
-                    title="{{ episode.podcast.title }}">
-                    <span class="active">
-                      Show
-                    </span>
-                    <span>
-                      <i class="fas fa-bars"></i>
-                    </span>
-                  </a>
-                  {% endif %}
                   {% if user.is_authenticated and results.view == "showpod" %}
                   <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
                     {% csrf_token %}
