--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -2,7 +2,13 @@
   {% if results.podcasts %}
     {% for subscription in results.podcasts %}
       {% with subscription.podcast as podcast %}
-        <div class="col-12 dope-result selectable expandable{% if forloop.counter|divisibleby:2 %} color-3{% endif %}" data-podid="{{ podcast.podid }}">
+        <div class="col-12 dope-result dope-result-l selectable expandable{% if forloop.counter|divisibleby:2 %} color-3{% endif %}" data-podid="{{ podcast.podid }}">
+          <button class="dope-dot exp" data-toggle="collapse" data-target="#subscriptions-collapse{{ forloop.counter }}"
+            aria-expanded="false" title="Show More">
+            <span class="exp-icon exp-nix">
+              <i class="fas fa-ellipsis-v"></i>
+            </span>
+          </button>
           <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}" title="{{ podcast.title }}">
             <img class="img-fluid lazyload" data-src="//{{ podcast.artworkUrl }}100x100bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg'" title="{{ podcast.title }}" width="auto" height="auto" alt="Podcast artwork" />
           </a>
@@ -41,7 +47,7 @@
               </span>
             </li>
           </ul>
-          <div class="dope-buttons dope-buttons-r px-0">
+          <div class="dope-buttons px-0">
             <form class="subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
               {% csrf_token %}
               <input type="hidden" name="podids[]" value="{{ podcast.podid }}" />
@@ -62,6 +68,88 @@
                 <i class="fas fa-check"></i>
               </span>
             </button>
+            <a class="btn-dope showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}"
+              title="Show All Episodes">
+              <span class="active">
+                Show
+              </span>
+              <span>
+                <i class="fas fa-bars"></i>
+              </span>
+            </a>
+            <button class="btn-dope exp" data-toggle="collapse" data-target="#subscriptions-collapse{{ forloop.counter }}"
+              aria-expanded="false" title="Show More">
+              <span class="active">
+                More
+              </span>
+              <span class="exp-icon">
+                <i class="fas fa-ellipsis-v"></i>
+              </span>
+            </button>
+          </div>
+          <div class="collapse fade subscriptions-collapse" id="subscriptions-collapse{{ forloop.counter }}">
+            <ul class="dope-list">
+              <li>
+                <span>
+                  Rank
+                </span>
+                <span>
+                  #{{ podcast.rank }}
+                </span>
+              </li>
+              <li>
+                <span>
+                  Genre
+                </span>
+                <span>
+                  <a class="browse-link" href="/search/?genre={{ podcast.get_primary_genre.url_format }}">
+                    {{ podcast.get_primary_genre }}
+                  </a>
+                  (#{{ podcast.genre_rank }})
+                </span>
+              </li>
+              <li>
+                <span>
+                  Language
+                </span>
+                <span>
+                  <a class="browse-link" href="/search/?genre={{ podcast.language.url_format }}">
+                    {{ podcast.language }}
+                  </a>
+                  (#{{ podcast.language_rank }})
+                </span>
+              </li>
+              <li>
+                <span>
+                  Subscribers
+                </span>
+                <span>
+                  {{ podcast.get_n_subscribers }}
+                </span>
+              </li>
+              <li>
+                <span>
+                  Content
+                </span>
+                <span>
+                  {% if podcast.explicit %}
+                    explicit
+                  {% else %}
+                    clean
+                  {% endif %}
+                </span>
+              </li>
+            </ul>
+            <p>
+              Description:
+            </p>
+            <p>
+              {% if podcast.description %}
+                {{ podcast.description }}
+              {% else %}
+                No description
+              {% endif %}
+            </p>            
           </div>
         </div>
       {% endwith %}
