--- a/index/templates/social-login.html
+++ b/index/templates/social-login.html
@@ -1,4 +1,4 @@
-<div class="dope-buttons dope-buttons-c">
+<div class="dope-buttons">
 <a class="btn-dope" href="/account/google/login/?process=login" title="Sign in with Google">
     <span class="active">
       Sign in with Google
