--- a/podcasts/templates/pagination.html
+++ b/podcasts/templates/pagination.html
@@ -1,6 +1,6 @@
 {% if results.pages %}
   <div class="col-12 px-0">
-    <div class="dope-buttons">
+    <div class="dope-buttons dope-buttons-l">
       {% if results.start_url %}
         <a class="btn-dope options-button" href="{{ results.start_url }}" title="First Page">
           <span>
