--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -57,7 +57,7 @@
         <p class="player-description">
           {{ episode.description }}
         </p>
-        <div class="dope-buttons px-0">
+        <div class="dope-buttons dope-buttons-l px-0">
           <a class="btn-dope" href="{{ episode.url }}" title="Download Episode" download>
             <span>
               <i class="fas fa-download"></i>
