--- a/podcasts/templates/playlist.html
+++ b/podcasts/templates/playlist.html
@@ -49,7 +49,7 @@
             </span>
           </li>
         </ul>
-        <div class="dope-buttons px-0">
+        <div class="dope-buttons dope-buttons-l px-0">
           <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
             {% csrf_token %}
             <input type="hidden" name="mode" value="remove" />
