--- a/podcasts/templates/results_bar.html
+++ b/podcasts/templates/results_bar.html
@@ -2,14 +2,14 @@
 <div class="row">
   <div class="col-12 results-bar color-4">
     {% if results.extra_options == "all" %}
-      <div class="dope-buttons">
+      <div class="dope-buttons dope-buttons-l">
         <button class="btn-dope results-back" onclick="window.history.back()" title="Back">
           <span>
             <i class="fas fa-arrow-left"></i>
           </span>
         </button>
       </div>
-      <div class="dope-buttons">
+      <div class="dope-buttons dope-buttons-r">
         <button class="btn-dope" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
           aria-controls="results-collapse" title="Minimize">
           <span class="exp-icon exp-minus exp-nix">
@@ -23,8 +23,8 @@
         </a>
       </div>
     {% elif results.extra_options == "min" %}
-      <div class="dope-buttons"></div>
-      <div class="dope-buttons">
+      <div class="dope-buttons dope-buttons-l"></div>
+      <div class="dope-buttons dope-buttons-r">
         <button class="btn-dope" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
           aria-controls="results-collapse" title="Minimize">
           <span class="exp-icon exp-minus exp-nix">
