--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -155,7 +155,7 @@
               <i class="fas fa-bars"></i>
             </span>
           </a>
-          <a class="btn-dope exp" data-toggle="collapse" data-target="#splash-play-collapse{{ forloop.counter }}" aria-expanded="false" title="Show More">
+          <a class="btn-dope exp" data-toggle="collapse" data-target="#listen-collapse{{ forloop.counter }}" aria-expanded="false" title="Show More">
             <span class="active">
               More
             </span>
@@ -164,7 +164,7 @@
             </span>
           </a>
         </div>
-        <div class="collapse fade splash-play-collapse" id="splash-play-collapse{{ forloop.counter }}">
+        <div class="collapse fade listen-collapse" id="listen-collapse{{ forloop.counter }}">
           <ul class="dope-list">
             <li>
               <span>
