--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -17,7 +17,7 @@
     <div class="col-12 collapse results-collapse fade show" id="results-collapse-{{ results.view }}">
       {% include "results-options.min.html" %}
       {% include "showpod.min.html" %}
-      {% if results.view == "splash" or results.view == "dashboard" %}
+      {% if results.view == "splash" %}
         {% include "splashboard.min.html" %}
       {% elif results.view == "grid" or results.view == "list" %}
         {% include "search.min.html" %}
