--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -2,7 +2,7 @@
   <div class="col-12 col-lg-4 color-1" id="player-wrapper"{% if user.is_authenticated %} data-auth="true"{% endif %}>
     <div class="player-content">
       <div class="collapse fade confirm-collapse color-1" id="confirm-collapse-player">
-        <div class="dope-buttons">
+        <div class="dope-buttons pt-0">
           <p>
             Close player?
           </p>
